<!--
  ~ Copyright (C) 2015 Evangilo Morais
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">ETAL 2015</string>
  <string name="my_schedule_title">Minha Agenda</string>
  <string name="about_title">Sobre</string>

  <string name="loren_ipsum">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</string>

  <string name="full_name_event">I Encontro de Tecnologia do Alto Oeste Potiguar</string>
  <string name="hypertext_event"><a href="http://eventos.ifrn.edu.br/etal">http://eventos.ifrn.edu.br/etal</a></string>
  <string name="developed_by">Desenvolvido por:</string>
  <string name="my_email">evangilo@gmail.com</string>


  <string name="try_again">Verif. conexão. Tente de novo.</string>
  <string name="try_msg">Tente</string>


  <string name="menu_settings">Settings</string>
  <string name="filter">Filtros</string>

  <!-- Drawer Layout Menu -->
  <string name="home">Home</string>
  <string name="my_schedule">Agenda</string>
  <string name="map">Mapa</string>
  <string name="about">Sobre</string>

  <string name="session_item_header_talks">Palestras</string>
  <string name="session_item_header_roundtables">Mesas-redondas</string>
  <string name="session_item_header_workshops">Minicursos</string>

  <string name="session_description">Descrição</string>
  <string name="session_preconditions">Pré-requisitos</string>
  <string name="session_speaker">Palestrante</string>

  <string name="session_date_format">d \'de\' MMM</string>
  <string name="session_hour_format">HH:mm</string>

  <string name="notification_msg">A sessão vai começar em 30 min.</string>

  <string name="empty_msg_list_schedule">Não existe nenhuma sessão agenda.</string>
  <string name="empty_msg_list_sessions">Não existe sessões que coincidam.</string>

</resources>
